--- a/src/assets/scss/templates/_templates.scss
+++ b/src/assets/scss/templates/_templates.scss
@@ -26,7 +26,7 @@
 		display: flex;
 		justify-content: flex-end;
 		padding: 0 2rem;
-		z-index: 60;
+		z-index: 900;
 	}
 }
 
